# ner-service

./: README.md  pyproject.toml
src/: main.py  models.py
